fix: question mark tooltip and alignment

--- a/apps/gauzy/src/app/@theme/components/theme-sidebar/theme-settings/components/layout-selector/layout-selector.component.scss
+++ b/apps/gauzy/src/app/@theme/components/theme-sidebar/theme-settings/components/layout-selector/layout-selector.component.scss
@@ -20,3 +20,9 @@
   }
   @include nb-select-overrides(2rem, $default-button-radius, $default-box-shadow);
 }
+
+.preferred-layout {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
